# pmp_proj

./: .gitignore  README.md  config.py  docx_generator.py  graph.py  main.py  proj_docx.txt  pyproject.toml  redis_client.py  requirements.txt  state.py  trial.py  utils.py
generated_docs/: AI-Powered_Career_Guidance_System_Wbs.docx  Housing_Project_Charter.docx
nodes/: communication_nodes.py  generation_nodes.py  risk_nodes.py  schedule_nodes.py  stakeholder_nodes.py  wbs_nodes.py
templates/: charter_template.docx  wbs_template.docx
