[project]
name = "pmp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Julius Gyeti 10989434",email = "jgyeti@st.ug.edu.gh"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
